--- a/package.json
+++ b/package.json
@@ -11,9 +11,21 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
+    "axios": "^1.13.2",
+    "firebase": "^12.5.0",
+    "firebase-admin": "^13.6.0",
+    "framer-motion": "^12.23.24",
+    "lucide-react": "^0.546.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-fast-marquee": "^1.6.5",
+    "react-icons": "^5.5.0",
     "react-router": "^7.9.5",
+    "react-simple-typewriter": "^5.0.1",
+    "sweetalert2": "^11.26.3",
+    "swiper": "^12.0.3",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
