--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-fast-marquee": "^1.6.5",
+    "react-hook-form": "^7.70.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.9.5",
     "react-simple-typewriter": "^5.0.1",
+    "recharts": "^3.6.0",
     "sweetalert2": "^11.26.3",
     "swiper": "^12.0.3",
     "tailwindcss": "^4.1.17"
